--- a/plugins/rebrand/rebrand.yml
+++ b/plugins/rebrand/rebrand.yml
@@ -2,5 +2,11 @@ name: rebrand
 description: Adds a name override of your choice in Stash
 version: 0.0.1
 ui:
+  requires:
+  - StashUserscriptLibrary
   javascript:
-  - rename-stash.js
+  - rebrand.js
+settings:
+  name:
+    displayName: Instance Name
+    type: STRING
