--- a/plugins/rebrand/rebrand.yml
+++ b/plugins/rebrand/rebrand.yml
@@ -1,10 +1,10 @@
 name: rebrand
 description: Adds a name override of your choice in Stash
-# requires: StashUserscriptLibrary
-version: 0.0.1
+# requires: forbiddenConfig
+version: 0.1.0
 ui:
   requires:
-  - StashUserscriptLibrary
+  - forbiddenConfig
   javascript:
   - rebrand.js
 settings:
