--- a/plugins/rebrand/rebrand.yml
+++ b/plugins/rebrand/rebrand.yml
@@ -1,10 +1,12 @@
 name: rebrand
 description: Adds a name override of your choice in Stash
 # requires: forbiddenConfig
-version: 0.1.0
+# requires: wfke
+version: 0.1.1
 ui:
   requires:
   - forbiddenConfig
+  - wfke
   javascript:
   - rebrand.js
 settings:
