--- a/plugins/tag-video/tag-video.yml
+++ b/plugins/tag-video/tag-video.yml
@@ -1,6 +1,7 @@
 name: tag-video
 description: Add <video> support to tag images
-version: 0.1.2
+version: 0.1.3
+# requires: wfke
 ui:
   javascript:
   - tag-video.js
