add to ui array

--- a/plugins/tag-video/tag-video.yml
+++ b/plugins/tag-video/tag-video.yml
@@ -3,6 +3,8 @@ description: Add <video> support to tag images
 version: 0.1.3
 # requires: wfke
 ui:
+  requires:
+  - wfke
   javascript:
   - tag-video.js
   css:
