--- a/plugins/rebrand/rebrand.yml
+++ b/plugins/rebrand/rebrand.yml
@@ -1,4 +1,4 @@
-name: rebrand
+name: Rebrand
 description: Adds a name override of your choice in Stash
 # requires: forbiddenConfig
 # requires: wfke
