--- a/plugins/studio-img-bg/studio-img-bg.yml
+++ b/plugins/studio-img-bg/studio-img-bg.yml
@@ -1,5 +1,5 @@
-name: studio-img-bg
-description: Add drop shadows to studio icons
+name: Studio background shadow
+description: Add drop shadows to studio icons for visibility
 version: 0.1
 # requires: wfke
 ui:
