--- a/plugins/tag-filter/tag-filter.yml
+++ b/plugins/tag-filter/tag-filter.yml
@@ -1,11 +1,13 @@
 name: tag-filter
 description: Filter out and hide specific tags
-version: 0.1.1
+version: 0.1.2
 # requires: 0gql-intercept
 # requires: wfke
+# requires: fontawesome-js
 ui:
   requires:
   - 0gql-intercept
   - wfke
+  - fontawesome-js
   javascript:
   - tag-filter.js
