--- a/plugins/log-console/log-console.yml
+++ b/plugins/log-console/log-console.yml
@@ -1,5 +1,5 @@
 name: log-console
-description: display log messages in console
+description: Display log messages in the web browser console
 version: 1.0
 ui:
   javascript:
