--- a/plugins/edit-unorganized/edit-unorganized.yml
+++ b/plugins/edit-unorganized/edit-unorganized.yml
@@ -1,14 +1,20 @@
 name: edit-unorganized
-description: Default to edit tab on unorganized scenes
+description: Default to edit tab on unorganized objects (scenes, images, galleries)
 # requires: CommunityScriptsUILibrary
 # requires: wfke
-version: 0.1.0
+version: 0.2.0
 settings:
   organized:
-    displayName: Open tab even if scene is organized
+    displayName: Open tab even if object is organized
     type: BOOLEAN
-  targetTab:
+  targetTabScenes:
+    displayName: Name of the tab to open [details, file-info, edit]
+    type: STRING
+  targetTabImages:
     displayName: Name of the tab to open [details, queue, markers, filters, file-info, history, edit]
+    type: STRING
+  targetTabGalleries:
+    displayName: Name of the tab to open [details, chapters, edit]
     type: STRING
 ui:
   requires:
