--- a/plugins/s6-helper/s6-helper.yml
+++ b/plugins/s6-helper/s6-helper.yml
@@ -1,6 +1,6 @@
 name: stash-s6 helper
 description: stash-s6 helper plugin
-version: 0.3.0
+version: 0.3.1
 exec:
   - sh
   - "{pluginDir}/s6-helper.sh"
@@ -8,9 +8,9 @@ interface: raw
 tasks:
   - name: Python reinstall
     description: Install all python dependencies
-    defaultArgs:
-      mode: install
+    execArgs:
+      - install
   - name: Print log
     description: Print stash-s6 log
-    defaultArgs:
-      mode: print_log
+    execArgs:
+      - print_log
